<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_msg">Welcome to ALC 4.0</string>
    <string name="about_btn">About ALC</string>
    <string name="profile_btn">My Profile</string>
    <string name="my_name">Moses Msukwa</string>
    <string name="track">Track :        Android</string>
    <string name="country">Country :      Malawi</string>
    <string name="phone_number">Phone number :      265881482472</string>
    <string name="email">Email :      msukwamose1@gmail.com</string>
    <string name="username">Slack Username :      @MosesMsukwa</string>
</resources>
